<resources>
    <string name="app_name">My Application2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="large_text">Large Text</string>
    <string name="show_password">Show password</string>
    <string name="remember_me">Remember me</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="phone">phone</string>
    <string name="email">email</string>
    <string name="enter">Enter</string>
    <string name="editLogin">Name</string>
    <string name="freistehendlogo">freistehendlogo</string>
</resources>
